fix segment not showing

--- a/igamt-lite-client/app/styles/main.scss
+++ b/igamt-lite-client/app/styles/main.scss
@@ -3377,3 +3377,8 @@ md-input-container > label {
     max-height:800px !important;
     overflow-y: scroll !important;
 }
+.md-list-item {
+    position: relative;
+    max-height: none !important;
+    padding-bottom: 7px !important;
+}
